refactor(review): 튜터님 피드백 사항을 바탕으로 코드 수정 후 서비스 테스트 추가